--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Organizador de Tarefas</title>
+  <title>MyDay</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
   <!-- Conteúdo principal escondido até login -->
   <div id="main-content" style="display:none;">
     <header>
-      <h1>Organizador de Tarefas</h1>
+      <h1>MyDay</h1>
       <nav>
         <button id="btn-login">Bem Vindo</button>
         <button id="btn-criar-conta">Criar Conta</button>
