Adicionado sistema de gerenciamento de tarefas com input e lista dinâmica

--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
     <main>
       <section id="tarefas">
         <h2>Tarefas</h2>
-        <p>Aqui vais gerir as tuas tarefas.</p>
-      </section>
+        <div class="input-area">
+          <input type="text" id="taskInput" placeholder="Digite uma tarefa">
+          <button id="addBtn">Adicionar</button>
+        </div>
+        <ul id="taskList"></ul>
+      </section>  
       <section id="calendario">
         <h2>Calendário</h2>
         <p>Aqui vais adicionar eventos.</p>
