--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
         </div>
         <ul id="taskList"></ul>
       </section>  
-      <section id="calendario">
-        <h2>Calendário</h2>
-        <p>Aqui vais adicionar eventos.</p>
+       <section id="prioridades">
+    <h2>Quadro de Prioridades</h2>
+    <div class="board">
+      <div class="column" ondrop="drop(event)" ondragover="allowDrop(event)" id="alta">
+        <h3>Alta</h3>
+      </div>
+      <div class="column" ondrop="drop(event)" ondragover="allowDrop(event)" id="media">
+        <h3>Média</h3>
+      </div>
+      <div class="column" ondrop="drop(event)" ondragover="allowDrop(event)" id="baixa">
+        <h3>Baixa</h3>
+      </div>
+    </div>
+  </section>
+        </div>
       </section>
       <section id="notas">
         <h2>Bloco de Notas</h2>
